fixed alignment and size of contact form

--- a/src/components/Contact/Contact.module.scss
+++ b/src/components/Contact/Contact.module.scss
@@ -2,6 +2,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 50%;
+    margin: 0 auto;
 
 
     h1 {
@@ -12,5 +14,41 @@
     form {
         display: flex;
         flex-direction: column;
+        align-items: center;
+        width: 100%;
+
+        label {
+
+            display: flex;
+            margin-bottom: 3rem;
+            font-size: 2rem;
+            width: 100%;
+            max-width: 50rem;
+
+            &:not(:last-of-type) {
+                align-items: center;
+            }
+
+            input,
+            textarea {
+                padding: 1rem;
+                width: 75%;
+                margin-left: auto;
+            }
+        }
+
+        textarea {
+            width: 100%;
+            height: 20rem;
+        }
+
+        button {
+            font-size: 2rem;
+            width: 50%;
+            max-width: 30rem;
+            height: 5rem;
+            display: inline-block;
+            margin: 2rem auto;
+        }
     }
 }
